Now downloads all SEER standard pops

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,8 @@ export(download_mcod_dta)
 export(download_standard_pops)
 export(mkdir_p)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,case_when)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(readr,fwf_widths)
+importFrom(readr,read_fwf)
