Now includes data for pop estimates and all functions to generate it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,26 @@
 
 export(download_mcod_csv)
 export(download_mcod_dta)
-export(download_standard_pops)
 export(mkdir_p)
+import(dplyr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
+importFrom(dplyr,ends_with)
+importFrom(dplyr,everything)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
+importFrom(readr,fwf_positions)
 importFrom(readr,fwf_widths)
+importFrom(readr,read_csv)
 importFrom(readr,read_fwf)
+importFrom(stats,setNames)
+importFrom(tidyr,gather)
+importFrom(utils,count.fields)
+importFrom(utils,download.file)
+importFrom(utils,unzip)
+importFrom(utils,zip)
