--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
+Depends: 
+    R (>= 2.10), 
     dplyr, 
-    readr
-Depends: R (>= 2.10)
+    readr, 
+    tidyr
 RoxygenNote: 6.0.1.9000
