Zapping away stata metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(rename_ni_flag)
 export(trim_5char_record)
 export(trim_trailing_whitespace)
 export(unite_records)
+export(zap_dta_data)
 import(dplyr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
@@ -28,10 +29,15 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
+importFrom(haven,zap_empty)
+importFrom(haven,zap_formats)
+importFrom(haven,zap_labels)
+importFrom(haven,zap_missing)
 importFrom(readr,fwf_positions)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_csv)
