Add in flagging helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ export(clean_icd9_data)
 export(convert_age27)
 export(download_mcod_csv)
 export(download_mcod_dta)
+export(flag_drug_deaths)
+export(flag_nonopioid_drug_deaths)
+export(flag_opioid_deaths)
+export(flag_opioid_types)
 export(mkdir_p)
 export(pad_3char_codes)
 export(prefix_e_to_ucod)
