--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(convert_age27)
 export(download_mcod_csv)
 export(download_mcod_dta)
 export(flag_drug_deaths)
+export(flag_nonheroin)
 export(flag_nonopioid_drug_deaths)
+export(flag_od_intent)
 export(flag_opioid_deaths)
 export(flag_opioid_types)
 export(mkdir_p)
@@ -18,6 +20,7 @@ export(prefix_e_to_ucod)
 export(prefix_to_record)
 export(remap_race)
 export(rename_ni_flag)
+export(summarize_binary_columns)
 export(trim_5char_record)
 export(trim_trailing_whitespace)
 export(unite_records)
@@ -31,12 +34,15 @@ importFrom(dplyr,ends_with)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,quos)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
 importFrom(dplyr,vars)
 importFrom(haven,zap_empty)
 importFrom(haven,zap_formats)
