Separate out the opioid type functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,17 @@ export(convert_age27)
 export(download_mcod_csv)
 export(download_mcod_dta)
 export(flag_drug_deaths)
+export(flag_heroin_present)
+export(flag_methadone_present)
 export(flag_nonheroin)
 export(flag_nonopioid_drug_deaths)
 export(flag_od_intent)
 export(flag_opioid_deaths)
 export(flag_opioid_types)
+export(flag_opium_present)
+export(flag_other_natural_present)
+export(flag_other_op_present)
+export(flag_other_synth_present)
 export(mkdir_p)
 export(pad_3char_codes)
 export(prefix_e_to_ucod)
