Add function to calculate age-specific mortality rate and variance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_hspanicr_column)
 export(add_pop_counts)
 export(add_std_pop)
+export(calc_asrate_var)
 export(categorize_age_5)
 export(categorize_hspanicr)
 export(categorize_race)
@@ -62,6 +63,12 @@ importFrom(readr,fwf_positions)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_csv)
 importFrom(readr,read_fwf)
+importFrom(rlang,"!!!")
+importFrom(rlang,"!!")
+importFrom(rlang,":=")
+importFrom(rlang,enquo)
+importFrom(rlang,quo)
+importFrom(rlang,quo_name)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
 importFrom(tidyr,gather)
