--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
-Depends: 
-    R (>= 2.10), 
     dplyr, 
+    haven, 
     readr, 
-    tidyr, 
-    tibble,
-    haven
+    rlang, 
+    tibble, 
+    tidyr
+Depends: 
+    R (>= 2.10)
 RoxygenNote: 6.0.1.9000
