Renamed convert_age27 to convert_ager27 to match codebook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ export(add_hspanicr_column)
 export(add_pop_counts)
 export(add_std_pop)
 export(calc_asrate_var)
+export(calc_stdrate_var)
 export(categorize_age_5)
 export(categorize_hspanicr)
 export(categorize_race)
 export(clean_icd9_data)
-export(convert_age27)
+export(convert_ager27)
 export(download_mcod_csv)
 export(download_mcod_dta)
 export(flag_drug_deaths)
@@ -69,7 +70,9 @@ importFrom(rlang,":=")
 importFrom(rlang,enquo)
 importFrom(rlang,quo)
 importFrom(rlang,quo_name)
+importFrom(rlang,quos)
 importFrom(stats,setNames)
+importFrom(stats,weighted.mean)
 importFrom(tibble,add_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,unite)
