Adding suicide stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,12 +18,20 @@ export(flag_methadone_present)
 export(flag_nonheroin)
 export(flag_nonopioid_drug_deaths)
 export(flag_od_intent)
+export(flag_opioid_contributed)
 export(flag_opioid_deaths)
 export(flag_opioid_types)
 export(flag_opium_present)
 export(flag_other_natural_present)
 export(flag_other_op_present)
 export(flag_other_synth_present)
+export(flag_suicide_deaths)
+export(flag_suicide_fall)
+export(flag_suicide_firearm)
+export(flag_suicide_other)
+export(flag_suicide_poison)
+export(flag_suicide_suffocation)
+export(flag_suicide_types)
 export(label_od_intent)
 export(mkdir_p)
 export(pad_3char_codes)
