Adding data and restricted data helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,12 +33,14 @@ export(flag_suicide_poison)
 export(flag_suicide_suffocation)
 export(flag_suicide_types)
 export(label_od_intent)
+export(label_suicide_type)
 export(mkdir_p)
 export(pad_3char_codes)
 export(prefix_e_to_ucod)
 export(prefix_to_record)
 export(remap_race)
 export(rename_ni_flag)
+export(state_abbrev_to_fips)
 export(subset_residents)
 export(summarize_binary_columns)
 export(trim_5char_record)
@@ -81,7 +83,9 @@ importFrom(rlang,quo_name)
 importFrom(rlang,quos)
 importFrom(stats,setNames)
 importFrom(stats,weighted.mean)
+importFrom(stringr,str_replace_all)
 importFrom(tibble,add_column)
+importFrom(tibble,as_data_frame)
 importFrom(tidyr,gather)
 importFrom(tidyr,unite)
 importFrom(utils,count.fields)
