Can download from the CDC FTP site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(clean_icd9_data)
 export(convert_ager27)
 export(download_mcod_csv)
 export(download_mcod_dta)
+export(download_mcod_fwf)
 export(flag_drug_deaths)
 export(flag_heroin_present)
 export(flag_methadone_present)
@@ -91,4 +92,3 @@ importFrom(tidyr,unite)
 importFrom(utils,count.fields)
 importFrom(utils,download.file)
 importFrom(utils,unzip)
-importFrom(utils,zip)
