Updated so that flag_opioid_deaths() now checks prereq columns.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ importFrom(stats,weighted.mean)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,add_column)
 importFrom(tibble,as_data_frame)
+importFrom(tibble,has_name)
 importFrom(tidyr,gather)
 importFrom(tidyr,unite)
 importFrom(utils,count.fields)
