Adding maternal deaths

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(download_mcod_csv)
 export(download_mcod_dta)
 export(flag_drug_deaths)
 export(flag_heroin_present)
+export(flag_maternal_deaths)
+export(flag_maternal_deaths_late)
 export(flag_methadone_present)
 export(flag_nonheroin)
 export(flag_nonopioid_drug_deaths)
