--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ export(add_std_pop)
 export(calc_asrate_var)
 export(calc_stdrate_var)
 export(categorize_age_5)
+export(categorize_age_5u1)
 export(categorize_hspanicr)
 export(categorize_race)
 export(clean_icd9_data)
 export(convert_ager27)
+export(convert_ager27u1)
 export(download_mcod_csv)
 export(download_mcod_dta)
 export(flag_drug_deaths)
