Better handling of fixed width format data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     rlang, 
     stringr, 
     tibble, 
-    tidyr
+    tidyr,
+    purrr
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.2
