--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(haven,zap_empty)
 importFrom(haven,zap_formats)
 importFrom(haven,zap_labels)
 importFrom(haven,zap_missing)
+importFrom(purrr,map_dfr)
 importFrom(readr,fwf_positions)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_csv)
@@ -89,6 +90,7 @@ importFrom(rlang,quos)
 importFrom(stats,setNames)
 importFrom(stats,weighted.mean)
 importFrom(stringr,str_replace_all)
+importFrom(tibble,add_case)
 importFrom(tibble,add_column)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,has_name)
